<resources>
    <string name="app_name">Generador de tesoros </string>
    <string name="main_saying">Todo hombre tiene un diablo y no descansa hasta encontrarlo.</string>
    <string name="generate_loot">Obtener tesoro</string>
    <string name="generate_source">Crear origen</string>
    <string name="source_name">Nombre del origen </string>
    <string name="item_name">Nombre del elemento</string>
    <string name="item_type">Color del elemento</string>
    <string name="save_btn">Guardar</string>
    <string name="list_items">Ver origen</string>
    <string name="add_source">Crear origen </string>
    <string name="choose_source">Elegir un origen:</string>
    <string name="choose_quantity">Elegir una cantidad</string>
    <string name="close">X</string>
    <string name="chest_img">chest img</string>
    <string name="generate">Generar</string>
    <string name="congrats">Has ganado un botín de color:</string>
    <string name="content">y su contenido es: </string>
    <string name="source_items">Elementos del origen </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>