<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MainButton"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_demon"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btn_generate"
        style="@style/MainButton"
        android:layout_width="207dp"
        android:layout_height="53dp"
        android:onClick="toGenerateLoot"
        android:text="@string/generate_loot"
        app:layout_constraintBottom_toTopOf="@+id/guideline_texto2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_texto"
        app:layout_constraintVertical_bias="0.245" />

    <Button
        android:id="@+id/btn_create"
        style="@style/MainButton"
        android:layout_width="207dp"
        android:layout_height="56dp"
        android:onClick="toCreateCustomLoot"
        android:text="@string/generate_source"
        app:layout_constraintBottom_toTopOf="@+id/guideline_texto2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_generate"
        app:layout_constraintVertical_bias="0.316" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="447dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_texto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="676dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="386dp"
        android:layout_height="140dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/demon_sker"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#F3F2F2"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_texto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029" />


</androidx.constraintlayout.widget.ConstraintLayout>